WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99577
REGRESSION (
r130826
or
r130828
): Twitter top bar is dysfunctional
https://bugs.webkit.org/show_bug.cgi?id=99577
Summary
REGRESSION (r130826 or r130828): Twitter top bar is dysfunctional
Xan Lopez
Reported
2012-10-17 03:03:53 PDT
Using ToT, I get this loading my twitter timeline. Makes the page load fail mid-way (timeline stops loading, parts of the sidebar are missing). ** Message: console message:
https://si0.twimg.com/c/swift/prereqs.bb6daa537849f734ddec310b15b98cd7da4e8d39.js
@9: TypeError: 'undefined' is not a function (evaluating 'd.then(b)')
Attachments
the patch
(39.30 KB, patch)
2012-10-17 15:49 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-10-17 10:36:43 PDT
The user observable symptom is that you cannot click anything in the top bar.
Alexey Proskuryakov
Comment 2
2012-10-17 10:36:55 PDT
<
rdar://problem/12518883
>
Filip Pizlo
Comment 3
2012-10-17 15:49:09 PDT
Created
attachment 169282
[details]
the patch
Mark Hahnenberg
Comment 4
2012-10-17 16:02:13 PDT
Comment on
attachment 169282
[details]
the patch r=me
Filip Pizlo
Comment 5
2012-10-17 16:09:55 PDT
Landed in
http://trac.webkit.org/changeset/131662
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug