REGRESSION (r130826 or r130828): Twitter top bar is dysfunctional https://bugs.webkit.org/show_bug.cgi?id=99577 <rdar://problem/12518883>

Reviewed by Mark Hahnenberg.

Source/JavaScriptCore:

It turns out that it's a good idea to maintain the invariants of your object model, such as that
elements past publicLength should have the hole value.

* dfg/DFGGraph.cpp:
(JSC::DFG::Graph::dump):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

LayoutTests:

* fast/js/dfg-array-pop-value-clearing-expected.txt: Added.
* fast/js/dfg-array-pop-value-clearing.html: Added.
* fast/js/jsc-test-list:
* fast/js/script-tests/dfg-array-pop-value-clearing.js: Added.
(foo):



Canonical link: https://commits.webkit.org/117617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131662 268f45cc-cd09-0410-ab3c-d52691b4dbfc